# tutorial

./: .gitignore  Procfile  README.md  hello.py  pyproject.toml  requirements.txt  shell.nix  testing.sqlite  tutorial.sqlite
.github/workflows/: ci.yml
tests/: conftest.py  test_fsm.py  test_functional.py  test_history.py
tutorial/: __init__.py
tutorial/alembic/: env.py
tutorial/alembic/versions/: 20230210_af056760889c.py  20230211_cf0c6ef3900a.py  20230224_453595e2e992.py
tutorial/models/: __init__.py  mymodel.py
tutorial/scripts/: initialize_db.py
tutorial/views/: default.py
