[tool.poetry]
name = "pyramid-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "pyramid_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
pyramid = "^2.0.1"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
