[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"

alembic = "*"
plaster_pastedeploy = "*"
pyramid = "^2"
pyramid_debugtoolbar = "*"
pyramid_jinja2 = "*"
pyramid_retry = "*"
pyramid_tm = "*"
SQLAlchemy = "^2"
transaction = "*"
waitress = "*"
zope-sqlalchemy = "*"

[tool.poetry.dev-dependencies]
WebTest = "*"
pytest = "*"
pytest-cov = "*"


[tool.poetry.plugins."paste.app_factory"]
main = "tutorial:main"

[tool.poetry.scripts]
initialize_tutorial_db = "tutorial.scripts.initialize_db:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
