[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"

alembic = "*"
plaster_pastedeploy = "*"
pyramid = "^2"
pyramid_debugtoolbar = "*"
pyramid_jinja2 = "*"
pyramid_retry = "*"
pyramid_tm = "*"
SQLAlchemy = "^1.4"
SQLAlchemy-Continuum = "*"
transaction = "*"
waitress = "*"
zope-sqlalchemy = "*"

# remove after https://github.com/kvesteri/sqlalchemy-continuum/pull/327 is merged and released
six = "*"

[tool.poetry.dev-dependencies]
WebTest = "*"
pytest = "*"
pytest-cov = "*"


[tool.poetry.plugins."paste.app_factory"]
main = "tutorial:main"

[tool.poetry.scripts]
initialize_tutorial_db = "tutorial.scripts.initialize_db:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
